--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="유튜브 API를 이용하여 나만의 사이트를 만드는 튜토리얼입니다."/>
-    <meta name="keyword" content="포트폴리오, 리액트, react, react.js, 코딩 사이트, 사이트 만들기, 리덕스" />
+    <meta name="description" content="동영상 스트리밍, 업로드, 외부 플랫폼 비디오, 정보 저장 사이트입니다.."/>
+    <meta name="keyword" content="태튜브" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <title>ts project🧐</title>
+    <title>태튜브</title>
 </head>
 <body>
     <div id="root"></div>
